--- a/layouts/partials/home/background.html
+++ b/layouts/partials/home/background.html
@@ -66,7 +66,7 @@
     </div>
 </article>
 <section>
-    {{ partial "recent-articles/main.html" . }}
+    {{ partial "home/recent-articles.html" . }}
 </section>
 {{ if .Site.Params.homepage.layoutBackgroundBlur | default false }}
 <div id="background-blur" class="fixed opacity-0 inset-x-0 top-0 h-full single_hero_background nozoom backdrop-blur-2xl"></div>
